--- a/public_html/src/sass/style.sass
+++ b/public_html/src/sass/style.sass
@@ -1,3 +1,115 @@
+@use 'fonts'
+@use 'grid'
+@use 'animations'
+
+@use 'modules/forms'
+@use 'modules/canvas'
+    
+// При работе с CSS должно быть продемонстрировано использование селекторов потомств, селекторов псевдоклассов, селекторов дочерних элементов, селекторов псевдоэлементов а также такие свойства стилей CSS, как наследование и каскадирование.
+
 *
-    padding: 0px
-    margin: 0px
+    padding: 0
+    margin: 0
+
+body>table
+    border: none
+    border-collapse: collapse
+
+.image-cover
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 1000px
+
+header, .header
+    background-color: #5c0377
+    color: white
+    text-align: center
+    padding: 20px
+
+    min-width: 500px
+
+    hr
+        color: #c489f5
+        margin: 10px 0 10px 0
+
+.sn-website-container
+    margin: inherit
+    display: flex
+    flex-direction: left
+    flex-wrap: nowrap
+    min-width: 1200px
+    min-height: 800px
+
+    section
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px
+        padding: 10px
+        background-color: rgba(241, 233, 248, 0.3)
+        transition: color, 0.5s ease 0s
+        margin-bottom: 48px
+
+    section:hover
+        transition: color, 0.5s ease 0s
+        background-color: rgba(255, 255, 255, 0.7)
+
+    section::after
+        position: relative
+        top: 37px
+        left: 0px
+        padding: 5px 10px 3px 10px
+        background-color: rgba(240, 5, 230, 0.3)
+        content: "......"
+        color: rgba(0,0,0,0)
+        border-radius: 0px 0px 10px 10px
+        
+
+.sn-website-container>*
+    padding: 15px
+
+.headline
+    display: inline-flex
+    justify-content: flex-start
+
+    font-family: 'sabrina star', fantasy !important
+    h1
+        font-size: 36pt
+        color: rgba(255, 255, 255, 0.7)
+
+    border-radius: 10px
+    background-color: #770599
+    padding: 10px 20px 10px 20px
+
+    h1:last-child
+        margin-left: 10px !important
+        padding: 0 10px 0 10px
+        border-radius: 10px
+        cursor: pointer
+        scale: 1
+    
+    h1:last-child:hover
+        animation-name: counter-scale
+        animation-duration: 1s
+        animation-iteration-count: infinite
+
+        color: white
+
+footer
+    background-color: rgba(5,7,10,0.5)
+    padding: 20px
+
+
+    *
+        margin: 0 auto
+        text-align: center
+
+    tbody > * > *
+        padding: 10px
+        margin: 5px
+        border-radius: 10px
+        border: 1px solid white
+        background-color: #BBB
+        
+    section:first-child
+        max-height: 500px
+        overflow: scroll
