--- a/public_html/src/sass/style.sass
+++ b/public_html/src/sass/style.sass
@@ -4,7 +4,8 @@
 
 @use 'modules/forms'
 @use 'modules/canvas'
-    
+@use 'modules/dop'
+
 // При работе с CSS должно быть продемонстрировано использование селекторов потомств, селекторов псевдоклассов, селекторов дочерних элементов, селекторов псевдоэлементов а также такие свойства стилей CSS, как наследование и каскадирование.
 
 *
